--- a/AhReview/build.gradle
+++ b/AhReview/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
@@ -18,6 +19,8 @@ buildscript {
         glide_version = "4.12.0"
         gson_version = "2.8.8"
         room_version = "2.3.0"
+        koin_version = "3.0.2"
+        naver_login_version = "4.2.6"
     }
 }
 
