--- a/AhReview/app/src/main/AndroidManifest.xml
+++ b/AhReview/app/src/main/AndroidManifest.xml
@@ -11,11 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AhReview">
         <activity
-            android:name=".ui.write_review.WriteReviewActivity"
+            android:name=".ui.writeReview.WriteReviewActivity"
             android:exported="false" />
 
+        <activity
             android:name=".ui.detailStore.DetailStoreActivity"
-            android:exported="true" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ui.findStore.FindStoreActivity"
@@ -23,11 +30,7 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
