--- a/AhReview/app/src/main/AndroidManifest.xml
+++ b/AhReview/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
 
     <application
         android:name=".Application"
@@ -20,7 +22,7 @@
             android:exported="true" />
       
         <activity
-            android:name=".ui.write_review.WriteReviewActivity"
+            android:name=".ui.writeReview.WriteReviewActivity"
             android:exported="false" />
 
         <activity
