--- a/AhReview/app/build.gradle
+++ b/AhReview/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
 
     implementation 'com.naver.speech.clientapi:naverspeech-ncp-sdk-android:1.1.3'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
