--- a/AhReview/app/src/main/AndroidManifest.xml
+++ b/AhReview/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-
     <application
         android:name=".Application"
         android:allowBackup="true"
@@ -20,26 +19,24 @@
         <activity
             android:name=".ui.test.TestActivity"
             android:exported="true" />
-      
         <activity
             android:name=".ui.writeReview.WriteReviewActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.detailStore.DetailStoreActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".ui.findStore.FindStoreActivity"
             android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
