--- a/AhReview/app/src/main/AndroidManifest.xml
+++ b/AhReview/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.writeReview.WriteReviewActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.detailStore.DetailStoreActivity"
             android:exported="true" />
@@ -37,7 +36,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
